ちょっと急ぎだったのでmainで修正

--- a/public/index.html
+++ b/public/index.html
@@ -11,54 +11,55 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500&display=swap" rel="stylesheet">
 
     <!-- local style sheets -->
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/reset.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/tetris.css">
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./css/tetris.css">
-    <script type="text/javascript" src="./js/tetris.js"></script>
-
     <title>Snow Land</title>
 </head>
 <body>
     <div class="container">
         <!-- header -->
         <div class="header">
-            <p>ちょっとゲームが作りたくてね。</p>
+            <p>NANITUKUROKANA</p>
         </div>
         
         <!-- main -->
         <div class="main">
-            <div class="wrapper-container">
+            <span class="window">
                 <span class="tetris-container">
-                    <canvas id="stage" width="250px" height="500px" style="background-color:black;">
+                    <canvas id="stage" width="210px" height="420px">
                     </canvas>
                     <span class="tetris-panel-container">
                       <p>Next:</p>
-                        <canvas id="next" width="150px" height="150px" style="background-color:black;">
+                        <canvas id="next" width="120px" height="120px">
                         </canvas>
                       <p>LINES:<span id="lines">0</span></p>
                       <p><span id="message"></span></p>
                       <div class="tetris-panel-container-padding"></div>
-                      <table class="tetris-button-panel">
-                        <tr>
-                          <td></td>
-                          <td id="tetris-rotate-button" class="tetris-button">↻</td>
-                          <td></td>
-                        </tr>
-                        <tr>
-                          <td id="tetris-move-left-button"class="tetris-button">←</td>
-                          <td id="tetris-fall-button"class="tetris-button">↓</td>
-                          <td id="tetris-move-right-button"class="tetris-button">→</td>
-                        </tr>
-                      </table>
                     </span>
                 </span>
-            </div>
-            <script>
-              var tetris = new Tetris();
-              tetris.startGame();
-            </script>
+            </span>
+            <span class="controller">
+              <table class="tetris-button-panel">
+                <tr>
+                  <td></td>
+                  <td id="tetris-rotate-button" class="tetris-button">↑</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td id="tetris-move-left-button"class="tetris-button">←</td>
+                  <td class="tetris-button"></td>
+                  <td id="tetris-move-right-button"class="tetris-button">→</td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td id="tetris-fall-button"class="tetris-button">↓</td>
+                  <td></td>
+                </tr>
+              </table>
+            </span>
         </div>
         
         <!-- footer -->
@@ -66,7 +67,8 @@
 
         </div>
     </div>
-
+    <!-- js -->
+    <script type="text/javascript" src="./js/tetris.js"></script>
     <script src="./js/function.js"></script>
 </body>
 </html>
